--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=kubernetes
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.locations=classpath:/db/migration/{vendor}
