--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,11 +10,13 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "**" ]
+    branches: [ "master" ]
 
 jobs:
-  build-bookmerkers-api:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -24,9 +26,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: ./mvnw verify
+        run: mvn -B package --file pom.xml
 
-      - if: ${{ github.ref == 'refs/heads/main' }}
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+      - if: ${{ github.ref == 'refs/heads/master' }}
         name: Build and Publish Docker Image
         run: |
           ./mvnw clean package jib:dockerBuild -DskipTests
