--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<maven.compiler.target>21</maven.compiler.target>
 		<testcontainers.version>1.17.2</testcontainers.version>
 		<jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
-		<problem-spring-web.version>0.27.0</problem-spring-web.version>
+		<problem-spring-web.version>0.29.1</problem-spring-web.version>
 		<dockerUserName>sodrul</dockerUserName>
 		<dockerImageName>${dockerUserName}/${project.artifactId}</dockerImageName>
 	</properties>
@@ -107,6 +107,11 @@
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web-starter</artifactId>
+			<version>${problem-spring-web.version}</version>
 		</dependency>
 	</dependencies>
 
