--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -3,7 +3,7 @@ services:
   bookmarker-api:
     build:
 #      context: bookmarker-api
-      dockerfile: Dockerfile.layered
+      dockerfile: Dockerfile
     environment:
       SPRING_PROFILES_ACTIVE: docker
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
@@ -15,3 +15,14 @@ services:
     restart: always
     depends_on:
       - bookmarker-db
+
+  bookmarker-ui-nextjs:
+    container_name: bookmarker-ui-nextjs
+    build:
+      context: bookmarker-ui-nextjs
+      dockerfile: Dockerfile
+    ports:
+      - "13000:3000"
+    environment:
+      SERVER_SIDE_API_BASE_URL: http://bookmarker-api:8080
+      CLIENT_SIDE_API_BASE_URL: http://localhost:18080
