--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,6 +59,6 @@ jobs:
       - if: ${{ github.ref == 'refs/heads/master' }}
         name: Build and Publish Docker Image
         run: |
-          mvn clean package jib:dockerBuild -DskipTests -Djib.to.image=${{ secrets.DOCKER_USERNAME }}/bookmarker-ui-nextjs:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/bookmarker-ui-nextjs .
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-ui-nextjs
