Part 21 : Kubernetes : ConfigMaps and Secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=kubernetes
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.locations=classpath:/db/migration/{vendor}
+
+#---
+spring.config.activate.on-profile=k8s
+spring.datasource.drive-class-name=org.postgresql.Driver
+spring.datasource.url=jdbd:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:appdb}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
