--- a/k8s/2-postgresdb.yaml
+++ b/k8s/2-postgresdb.yaml
@@ -1,3 +1,28 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-pv
+spec:
+  storageClassName: 'standard'
+  accessModes:
+    - ReadWriteOnce
+  capacity:
+    storage: 2Gi
+  hostPath:
+    path: /run/desktop/mnt/host/d/Codes/Spring Boot/kubernetes/volumes
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pv-claim
+spec:
+  storageClassName: 'standard'
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -11,6 +36,16 @@ spec:
       labels:
         app: postgres-pod
     spec:
+#      initContainers:
+#        - name: fix-permissions
+#          image: busybox
+#          command:
+#            - "sh"
+#            - "-c"
+#            - "mkdir -p /var/lib/postgresql/data/pgdata && chmod -R 777 /var/lib/postgresql/data"
+#          volumeMounts:
+#            - name: postgres-storage
+#              mountPath: /var/lib/postgresql/data
       containers:
         - name: postgres
           image: "postgres:14-alpine"
@@ -33,3 +68,13 @@ spec:
                 configMapKeyRef:
                   name: bookmarker-config
                   key: postgres_dbname
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
+
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: postgres-pv-claim
